// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  font-family: 'Fira Sans';
  font-size: 12px;
  font-weight: normal;
  line-height: 1;
}

.c1 {
  width: 100%;
  border: 1px solid #99C1CC;
  padding: 12px 16px;
  outline: 0;
}

@media only screen and (min-width:768px) {
  .c0 {
    font-size: 16px;
    font-weight: normal;
    line-height: 1;
  }
}

<input
  class="c0 c1"
  name="nome"
  placeholder="Nome"
  type="text"
  value="Rodrigo"
/>
`;

exports[`<TextField /> when field is invalid displays the respective error message 1`] = `
.c0 {
  font-family: 'Fira Sans';
  font-size: 12px;
  font-weight: normal;
  line-height: 1;
}

.c1 {
  width: 100%;
  border: 1px solid #99C1CC;
  padding: 12px 16px;
  outline: 0;
}

@media only screen and (min-width:768px) {
  .c0 {
    font-size: 16px;
    font-weight: normal;
    line-height: 1;
  }
}

<input
  class="c0 c1"
  name="email"
  placeholder="Email"
  type="text"
  value="rodrigo.achilles@"
/>
`;
